--- a/module2_sol/css/module2_sol.css
+++ b/module2_sol/css/module2_sol.css
@@ -1,35 +1,134 @@
+/* 
+File name: module2_sol.css
+Description: CSS rules for the Module 2 solution website.
+Author: Andrew Namgoong
+*/
+
 * {
 	box-sizing: border-box;
-	/*
-		margin: 0px;
-		padding: 0px;
-	*/
+	margin: 0px;
+	padding: 0px;
 }
 
-p {
-	width: 33.3%;
-	border: 1px solid black;
-	float: left;
-	padding: 10px;
-	text-align: center;
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	background-color: white;
+}
+
+.container {
+	background-color: #0000FF;
+	min-height: 200px;
+	margin: 15px;
 }
 
 h2 {
-		font-weight: bold;
-		text-align: center;
+	font-weight: bold;
+	font-size: 175%;
+	text-align: center;
+	margin: 15px 0px 30px 0px;
 }
 
-/* Desktop */
-@media (min-width: 992px) {
+h3 {
+	border: 1px solid black;
+	background-color: #2D80CC;
+	text-align: center;
+	color: white;
+	width: 150px;
+	height: 25px;
+	font-size: 125%;
+	float: right;
+}
 
+p {
+	color: white;
+	padding: 40px 15px 15px 15px;
+}
+
+/********** Desktop **********/
+@media (min-width: 992px) {
+	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+   		float: left;
+  		border: 1px solid black;
+	}
+	.col-lg-1 {
+		width: 8.33%;
+ 	}
+  	.col-lg-2 {
+    	width: 16.66%;
+  	}
+  	.col-lg-3 {
+    	width: 25%;
+  	}
+  	.col-lg-4 {
+    	width: 33.33%;
+  	}
+  	.col-lg-5 {
+    	width: 41.66%;
+  	}
+  	.col-lg-6 {
+    	width: 50%;
+  	}
+  	.col-lg-7 {
+    	width: 58.33%;
+  	}
+  	.col-lg-8 {
+    	width: 66.66%;
+  	}
+  	.col-lg-9 {
+    	width: 74.99%;
+  	}
+  	.col-lg-10 {
+   		width: 83.33%;
+  	}
+  	.col-lg-11 {
+    	width: 91.66%;
+  	}
+  	.col-lg-12 {
+    	width: 100%;
+  	}
 }
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 991px) {
-
-}
-
-/* Mobile */
-@media (min-width: 767px) {
-
+	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+   		float: left;
+  		border: 1px solid black;
+	}
+	.col-md-1 {
+		width: 8.33%;
+ 	}
+  	.col-md-2 {
+    	width: 16.66%;
+  	}
+  	.col-md-3 {
+    	width: 25%;
+  	}
+  	.col-md-4 {
+    	width: 33.33%;
+  	}
+  	.col-md-5 {
+    	width: 41.66%;
+  	}
+  	.col-md-6 {
+    	width: 50%;
+  	}
+  	.col-md-7 {
+    	width: 58.33%;
+  	}
+  	.col-md-8 {
+    	width: 66.66%;
+  	}
+  	.col-md-9 {
+    	width: 74.99%;
+  	}
+  	.col-md-10 {
+   		width: 83.33%;
+  	}
+  	.col-md-11 {
+    	width: 91.66%;
+  	}
+  	.col-md-12 {
+    	width: 100%;
+  	}
 }
